--- a/home.html
+++ b/home.html
@@ -730,53 +730,34 @@ footer.site-footer{
 
 
 
-
-
-/* =======================
-   MOBILE MENU COLORS
-   =======================*/
 @media (max-width: 880px) {
 
-  /* Entire mobile panel background */
+  /* Mobile panel background */
   .mobile-panel {
-    background: #002b5c; /* deep blue */
+    background: #ffffff; /* keep white for clean contrast */
   }
 
-  /* Each link inside the mobile menu */
+  /* All links inside the hidden mobile menu */
   .mobile-panel a {
     display: block;
-    padding: 16px;
-    margin: 6px 0;
-    border-radius: 10px;
-
-    font-size: 17px;
-    font-weight: 600;
-
-    background: #ffffff;       /* button background */
-    color: #002b5c !important; /* text color */
+    padding: 16px 20px;
+    font-size: 18px;
     text-decoration: none;
 
-    transition: 0.2s;
+    background: #0b61b6;   /* BLUE */
+    color: #ffffff !important;
+    border-radius: 8px;
+    margin: 8px 12px;
+
+    border: none;
   }
 
-  /* Hover effect */
+  /* Optional hover */
   .mobile-panel a:hover {
-    background: #ffcc00; /* yellow */
-    color: #000 !important;
-  }
-
-  /* Join button special */
-  .mobile-panel a.btn-join {
-    background: #28a745; 
-    color: #fff !important;
-  }
-
-  /* Donate button special */
-  .mobile-panel a.btn-donate {
-    background: #d9534f;
-    color: #fff !important;
+    background: #084b8d; /* darker blue */
   }
 }
+
 
   
 </style>
