Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@ footer.site-footer{
 
     <!-- Row 1: Logo + Two-line NGO Name -->
  <div class="brand">
-  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763381089/WhatsApp_Image_2025-11-17_at_9.22.25_AM_c17ghd.jpg" alt="swisslogo" />
+  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" alt="swisslogo" />
 
   <h1>
     Swiss Aid Connect<br>
