--- a/index.html
+++ b/index.html
@@ -906,6 +906,40 @@ footer.site-footer{
 
 
 
+
+
+
+.floating-home-btn {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  width: 58px;
+  height: 58px;
+
+  background: #134d9c;
+  border-radius: 50%;
+  border: none;
+
+  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  z-index: 9999;
+  cursor: pointer;
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+.floating-home-btn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 12px 28px rgba(0,0,0,0.35);
+}
+
+.floating-home-btn svg {
+  pointer-events: none;
+}
+
   
 </style>
 </head>
@@ -1260,6 +1294,13 @@ footer.site-footer{
 
 
   </div>
+  <button class="floating-home-btn" id="floatHomeBtn" aria-label="Home">
+  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M3 12l9-9 9 9"/>
+    <path d="M9 21V9h6v12"/>
+  </svg>
+</button>
+
 </section>
 
 
@@ -1951,7 +1992,10 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 
-
+document.getElementById("floatHomeBtn").addEventListener("click", () => {
+  showHome();
+  window.scrollTo({ top: 0, behavior: "smooth" });
+});
 </script>
 
 
