--- a/index4.html
+++ b/index4.html
@@ -1484,12 +1484,14 @@ footer.site-footer{
 
 
   </div>
-  <button class="floating-home-btn" id="floatHomeBtn" aria-label="Home">
-  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-    <path d="M3 12l9-9 9 9"/>
-    <path d="M9 21V9h6v12"/>
-  </svg>
-</button>
+  
+  <!-- Floating Home Button -->
+  <button class="floating-home-btn floatHomeBtn" aria-label="Home">
+    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M3 12l9-9 9 9"/>
+      <path d="M9 21V9h6v12"/>
+    </svg>
+  </button>
 
 </section>
 
