--- a/index4.html
+++ b/index4.html
@@ -1679,7 +1679,7 @@ document.getElementById('btnMenu').addEventListener('click', () => {
             <a href="#" id="mobileLangToggle">${languageText}</a>
 
              <a href="#" data-key="about-us-nav">About Us</a>
-             <a href="#impact-heading" data-key="our-impact-nav">Our Focus Areas</a>
+           <a href="#" data-key="focus-nav">Our Focus Areas</a>
             <a href="#join-us-heading" data-key="get-involved-nav">Get Involved</a>
            
         `;
