--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,8 @@ footer.site-footer{
     <div class="about-text">
       <h2 id="about-heading" class="about-title">Making Change Happen</h2>
       <p class="about-subtitle">Connecting communities, empowering lives, inspiring hope.</p>
-      <a class="btn btn-learn" href="#">Learn More</a>
+     <a class="btn btn-learn" href="#" data-key="focus-nav">Learn More</a>
+
     </div>
     <div class="about-image">
       <img src="https://cdn.pixabay.com/photo/2016/11/14/03/16/book-1822474_640.jpg" alt="About Us Image">
@@ -1272,7 +1273,8 @@ footer.site-footer{
         <span class="line line4">Join us in building brighter futures through hands-on community initiatives.</span>
         <span class="line line5">Every effort counts, and together we transform lives for the better.</span>
       </p>
-      <a href="#" class="serve-btn">Learn More</a>
+      <a href="#" class="serve-btn" data-key="about-us-nav">Learn More</a>
+
     </div>
     <div class="serve-image">
       <img src="https://cdn.pixabay.com/photo/2015/11/23/03/36/medical-emergency-1057706_1280.jpg" alt="Serving communities">
