--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,8 @@ footer.site-footer{
         <h2 id="hero-heading" class="hero-huge">We are serving a world in need.</h2>
         <span class="hero-sub">One act of kindness at a time.</span>
         <div class="hero-ctas" role="group" aria-label="Primary calls to action">
-          <a class="cta cta-primary" href="#">Our Programs</a>
+         <a class="cta cta-primary" href="#" data-key="focus-nav">Our Programs</a>
+
           <a class="cta cta-outline" href="#">Volunteer</a>
         </div>
       </div>
